--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             // Audio elementen voor beide geluiden
             const timerSound = document.getElementById("timerSound");
             const timerEndSound = document.getElementById("timerEndSound");
+            const finaleSound = document.getElementById("finaleSound");  // Het finale geluid
 
             function hideIfNeeded() {
                 const params = new URLSearchParams(window.location.search);
@@ -113,7 +114,7 @@
                 selectedTimerRef.set(index);
             }
 
-            // Start de timer en speel het geluid af via Firebase
+            // Start de timer en speel het geluid af
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
@@ -121,22 +122,35 @@
                         timers[geselecteerdeTimer]--;
                         updateWeergave();
                         updateDatabase();
+                    } else if (timers[geselecteerdeTimer] === 0) {
+                        // Timer is op 0, stop het timer-geluid en speel het finale geluid af
+                        timerSound.pause();  // Stop het timer-geluid
+                        timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
+                        finaleSound.play().catch((error) => {
+                            console.log("Finale geluid kon niet worden afgespeeld:", error);
+                        });
                     }
                 }, 1000);
 
-                // Zet 'playSound' in Firebase naar true om geluid af te spelen op de displaypagina
-                const playSoundRef = firebase.database().ref('playSound');
-                playSoundRef.set(true);  // Activeer geluid op de displaypagina
+                // Speel het geluid af wanneer de timer start
+                timerSound.play().catch((error) => {
+                    console.log("Audio kon niet worden afgespeeld:", error);
+                });
             }
 
-            // Stop de timer en speel het stopgeluid af via Firebase
+            // Stop de timer en stop het geluid, speel het stop geluid af
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
 
-                // Zet 'playStopSound' in Firebase naar true om stopgeluid af te spelen op de displaypagina
-                const playStopSoundRef = firebase.database().ref('playStopSound');
-                playStopSoundRef.set(true);  // Activeer stopgeluid op de displaypagina
+                // Stop het timer-geluid
+                timerSound.pause();  // Stop het timer-geluid
+                timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
+                
+                // Speel het stop geluid af
+                timerEndSound.play().catch((error) => {
+                    console.log("Stopgeluid kon niet worden afgespeeld:", error);
+                });
             }
 
             function resetTimer() {
@@ -459,6 +473,10 @@
     </audio>
     <audio id="timerEndSound" preload="auto">
         <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/audio/timer-sound-end.mp3" type="audio/mp3">
+        Je browser ondersteunt het afspelen van audio niet.
+    </audio>
+    <audio id="finaleSound" preload="auto">
+        <source src="https://raw.githubusercontent.com/Gurten7/Timer-ppt/main/audio/Sound-finale.mp3" type="audio/mp3">
         Je browser ondersteunt het afspelen van audio niet.
     </audio>
 
