--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
                         el.setAttribute("disabled", "true");
                     });
 
+                    // Start afspelen van geluiden als de pagina in displaymodus is
+                    firebase.database().ref('action').on('value', (snapshot) => {
+                        const action = snapshot.val();
+                        if (action === 'start') {
+                            timerSound.play().catch((error) => {
+                                console.log("Audio kon niet worden afgespeeld:", error);
+                            });
+                        } else if (action === 'stop') {
+                            timerSound.pause();
+                            timerSound.currentTime = 0;
+                            timerEndSound.play().catch((error) => {
+                                console.log("Stopgeluid kon niet worden afgespeeld:", error);
+                            });
+                        } else if (action === 'reset') {
+                            finaleSound.play().catch((error) => {
+                                console.log("Finale geluid kon niet worden afgespeeld:", error);
+                            });
+                        }
+                    });
                 } else {
                     const elementsToShow = document.querySelectorAll('.hide-if-needed');
                     elementsToShow.forEach(el => {
@@ -336,9 +355,18 @@
                 selecteerTimer(parseInt(event.target.value));
             });
 
-            document.getElementById("startBtn").addEventListener("click", startTimer);
-            document.getElementById("stopBtn").addEventListener("click", stopTimer);
-            document.getElementById("resetBtn").addEventListener("click", resetTimer);
+            document.getElementById("startBtn").addEventListener("click", () => {
+                firebase.database().ref('action').set('start');
+            });
+
+            document.getElementById("stopBtn").addEventListener("click", () => {
+                firebase.database().ref('action').set('stop');
+            });
+
+            document.getElementById("resetBtn").addEventListener("click", () => {
+                firebase.database().ref('action').set('reset');
+            });
+
             document.getElementById("toggleBtn").addEventListener("click", toggleTimerZichtbaarheid);
             document.getElementById("setTimeBtn").addEventListener("click", stelAangepasteTijdIn);
 
@@ -506,3 +534,4 @@
     </div>
 </body>
 </html>
+
