--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Slimste Kameraad</title>
+    <!-- Oude versie van Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script defer>
         document.addEventListener("DOMContentLoaded", () => {
             const firebaseConfig = {
-                apiKey: "", 
+                apiKey: "", // Geen API Key nodig zonder Web App
                 authDomain: "slimste-kameraad-timer.firebaseapp.com",
                 databaseURL: "https://slimste-kameraad-timer-default-rtdb.europe-west1.firebasedatabase.app",
                 projectId: "slimste-kameraad-timer",
                 storageBucket: "slimste-kameraad-timer.appspot.com",
                 messagingSenderId: "37865286019",
-                appId: "" 
+                appId: "" // Geen Web App ID nodig
             };
 
             const app = firebase.initializeApp(firebaseConfig);
@@ -27,19 +28,17 @@
             let geselecteerdeTimer = 0;
             let zichtbareTimers = [true, true, true, true];
 
+            // Audio elementen voor beide geluiden
             const timerSound = document.getElementById("timerSound");
             const timerEndSound = document.getElementById("timerEndSound");
-            const finaleSound = document.getElementById("finaleSound");
+            const finaleSound = document.getElementById("finaleSound");  // Het finale geluid
 
-            // Haal de view op uit de URL (of stel standaard in op 'controller')
-            const params = new URLSearchParams(window.location.search);
-            const view = params.get('view') || 'controller';
-
-            // Verberg of toon elementen op basis van de view-parameter
             function hideIfNeeded() {
+                const params = new URLSearchParams(window.location.search);
+                const view = params.get('view');
                 if (view === 'display') {
-                    const elementsToHide = document.querySelectorAll('.hide-if-needed');
-                    elementsToHide.forEach(el => {
+                    // Geluiden afspelen in de display modus
+                    document.querySelectorAll('.hide-if-needed').forEach(el => {
                         el.style.display = 'none';
                     });
 
@@ -57,8 +56,8 @@
                     });
 
                 } else {
-                    const elementsToShow = document.querySelectorAll('.hide-if-needed');
-                    elementsToShow.forEach(el => {
+                    // Geluid afspelen niet in controller modus
+                    document.querySelectorAll('.hide-if-needed').forEach(el => {
                         el.style.display = 'block';
                     });
 
@@ -115,6 +114,7 @@
                 selectedTimerRef.set(index);
             }
 
+            // Start de timer en speel het geluid af
             function startTimer() {
                 if (intervals[geselecteerdeTimer]) return;
                 intervals[geselecteerdeTimer] = setInterval(() => {
@@ -123,37 +123,40 @@
                         updateWeergave();
                         updateDatabase();
                     } else if (timers[geselecteerdeTimer] === 0) {
-                        timerSound.pause();
-                        timerSound.currentTime = 0;
-                        finaleSound.play().catch((error) => {
-                            console.log("Finale geluid kon niet worden afgespeeld:", error);
-                        });
+                        // Timer is op 0, stop het timer-geluid en speel het finale geluid af
+                        timerSound.pause();  // Stop het timer-geluid
+                        timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
+                        if (window.location.search.includes('view=display')) {
+                            finaleSound.play().catch((error) => {
+                                console.log("Finale geluid kon niet worden afgespeeld:", error);
+                            });
+                        }
                     }
                 }, 1000);
 
-                timerSound.play().catch((error) => {
-                    console.log("Audio kan niet worden afgespeeld:", error);
-                });
-
-                // Update de timerstatus in Firebase
-                const timerStatusRef = firebase.database().ref('timerStatus');
-                timerStatusRef.set("running");
+                // Speel het geluid af wanneer de timer start
+                if (window.location.search.includes('view=display')) {
+                    timerSound.play().catch((error) => {
+                        console.log("Audio kon niet worden afgespeeld:", error);
+                    });
+                }
             }
 
+            // Stop de timer en stop het geluid, speel het stop geluid af
             function stopTimer() {
                 clearInterval(intervals[geselecteerdeTimer]);
                 intervals[geselecteerdeTimer] = null;
 
-                timerSound.pause();
-                timerSound.currentTime = 0;
+                // Stop het timer-geluid
+                timerSound.pause();  // Stop het timer-geluid
+                timerSound.currentTime = 0;  // Zet het timer-geluid terug naar het begin
                 
-                timerEndSound.play().catch((error) => {
-                    console.log("Stopgeluid kon niet worden afgespeeld:", error);
-                });
-
-                // Update de timerstatus in Firebase
-                const timerStatusRef = firebase.database().ref('timerStatus');
-                timerStatusRef.set("stopped");
+                // Speel het stop geluid af
+                if (window.location.search.includes('view=display')) {
+                    timerEndSound.play().catch((error) => {
+                        console.log("Stopgeluid kon niet worden afgespeeld:", error);
+                    });
+                }
             }
 
             function resetTimer() {
@@ -297,6 +300,7 @@
                 const teamNamesRef = firebase.database().ref('teamNames');
                 teamNamesRef.once('value', (snapshot) => {
                     if (!snapshot.exists()) {
+                        teamNames
                         teamNamesRef.set({
                             team1: "Team 1",
                             team2: "Team 2",
@@ -313,6 +317,7 @@
                     }
                 });
 
+                // Voeg de timerVisibility toe in Firebase
                 const visibilityRef = firebase.database().ref('timerVisibility');
                 visibilityRef.once('value', (snapshot) => {
                     if (!snapshot.exists()) {
@@ -328,7 +333,7 @@
 
             checkAndInitializeDatabase();
             syncTimers();
-            syncVisibility(); 
+            syncVisibility();  // Voeg deze regel toe
 
             document.querySelectorAll(".timer").forEach((el, index) => {
                 el.addEventListener("click", () => selecteerTimer(index));
